--- a/index.html
+++ b/index.html
@@ -36,44 +36,61 @@
             </nav>
         </header>
         <article>
-            <h1><a href=""></a>todo:Titel eurer Etappe (z.B. Etappe 7: Scharnitz - Achensee)</h1>
-            <p>todo:Intro-Text eurer Etappenseite</p>
+            <h1><a href="https://www.tirol.at/reisefuehrer/sport/radfahren/biketouren/a-bike-trail-tirol-kufstein-koessen">Etappe 10: Kufstein - Kössen</a></h1>
+            <p>Die mittelschwierige Etappe verläuft auf gut ausgebauten Radwanderwegen und Forststraßen und
+                ist geprägt von saftigen Wiesen und grünen Wäldern, die in die imposante Kulisse des
+                Kaisergebirges eingebettet sind. Nach dem Ort Durchholzen erfolgt ein Anstieg mit 350 Höhenmeter
+                bis zur Gwirchtalm – ist diese Steigung überwunden, führt der Weg abwärts über das Habersautal
+                zum Walchsee – ein Bad bietet hier angenehme Abkühlung und sorgt für eine erfrischende
+                Weiterfahrt bis nach Kössen.
+            </p>
 
             <div class="summary">
                 <div class="summary-badge">
-                    <i class="fas fa-walking"></i> todo:Länge km
+                    <i class="fas fa-walking"></i> 33,8 km
                 </div>
                 <div class="summary-badge">
-                    <i class="fas fa-clock"></i> todo:Fahrzeit h
+                    <i class="fas fa-clock"></i> 3 h
                 </div>
                 <div class="summary-badge">
-                    <i class="fas fa-sort-amount-up-alt"></i> todo:bergauf m
+                    <i class="fas fa-sort-amount-up-alt"></i> 770 m
                 </div>
                 <div class="summary-badge">
-                    <i class="fas fa-mountain"></i> todo:höchster Punkt m
+                    <i class="fas fa-mountain"></i> 1020 m
                 </div>
                 <div class="summary-badge">
-                    <i class="fas fa-sort-amount-down-alt"></i> todo:bergab m
+                    <i class="fas fa-sort-amount-down-alt"></i> 660 m
                 </div>
                 <div class="summary-badge">
-                    <i class="fa-solid fa-heart-pulse"></i> todo:Schwierigkeit
+                    <i class="fa-solid fa-heart-pulse"></i> Mittelschwierig
                 </div>
                 <div class="summary-badge">
-                    <i class="fas fa-download"></i> todo:Link GPX mit Label "Download GPX"
+                    <i class="fas fa-download"></i> <a href="https://www.tirol.at/action/download?id=address_668&downloadId=432">Download GPX</a>
                 </div>
             </div>
 
             <div id="map"></div>
 
             <h3>Streckenbeschreibung</h3>
-            <p>todo:Streckenbeschreibung eurer Etappenseite</p>
+            <p>
+                Zunächst folgt man 2 Kilometer dem Radweg flussabwärts direkt am Inn, ehe man rechts nach Oberndorf -
+                Ebbs abzweigt. Das kleine Dorf wird durchquert und in weiterer Folge orientiert man sich immer an den
+                grünen Radwegweisern mit dem Bike Trail Tirol Logo. Durch Wiesen und Wälder geht es nun vorbei an Ebbs
+                Richtung Walchsee. Kurz vor dem Weiler Durchholzen erreicht man die Bundesstraße und radelt auf dieser
+                1,5 km durch den kleinen Ort (1,5 h ab dem Etappenstart) bis man wieder auf den Radweg (Nr.15) Richtung
+                Walchsee abzweigt. Kurz vor dem Walchsee im Weiler Oed zweigt man vom Radweg rechts Richtung Habersautal
+                (323) ab. Nun folgt ein Anstieg über 350 Höhenmeter zur Gwirchtalm, auf der anderen Seite hinab ins
+                Habersautal und weiter zur Hauptstraße in Walchsee (1,5 h ab Durchholzen). Auf dieser geht es etwa
+                einen Kilometer in östlicher Richtung bis man links auf den Radweg nach Kössen abzweigt (15). Von nun
+                an folgt man immer den Radwegweisern nach Kössen bis ins Zentrum (1 h ab Walchsee).
+            </p>
 
         </article>
         <footer>
             <strong>Datenquellen:</strong>
             <nav>
                 <a href="https://www.tirol.at/reisefuehrer/sport/mountainbiken/bike-trail-tirol">Bike Trail Tirol (Online Reiseführer Tirol)</a> |
-                todo:Link auf die Etappenseite eurer Etappe mit dem Linktext wie beim todo:Titel ganz oben |
+                <a href="https://www.tirol.at/reisefuehrer/sport/radfahren/biketouren/a-bike-trail-tirol-kufstein-koessen">Etappe 10: Kufstein - Kössen</a> |
                 <a href="https://www.data.gv.at/katalog/de/dataset/land-tirol_elektronischekartetirol">eGrundkarte Tirol</a>
             </nav>
         </footer>
