--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </div>
 
             <div id="map"></div>
+            <div id="profile"></div>
 
             <h3>Streckenbeschreibung</h3>
             <p>
