--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
+    <script  src="etappen.js"></script>
     <script defer src="main.js"></script>
 </head>
 
@@ -72,6 +73,10 @@
                     <i class="fas fa-download"></i> <a href="https://www.tirol.at/action/download?id=address_668&downloadId=432">Download GPX</a>
                 </div>
             </div>
+
+            <select id="pulldown">
+                <option vlaue="etappe1">Etappenauswahl</option>
+            </select>
 
             <div id="map"></div>
             <div id="profile"></div>
