--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
     <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>
 
+    <!-- Plugin -->
+    <link rel="stylesheet" href="lib/Control.MiniMap.css">
+    <script src="lib/Control.MiniMap.js"></script>
+
+
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script  src="etappen.js"></script>
